Data: update titles and outcomes

--- a/data/posts/2000/1137.md
+++ b/data/posts/2000/1137.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/B2v2E1Y-2_A?t=1045
 
 ### title.ru
-
+В России будет вторая волна мобилизации
 
 ### statement.en
 I think there will be. Because there are not enough forces and resources. 
@@ -26,7 +26,7 @@ The answer to the question: 'Will there be mobilization in Russia or not?'
 1) Yulia Latynina https://youtu.be/B2v2E1Y-2_A?t=1045
 
 ### title.en
-
+There will be a second wave of mobilization in Russia
 
 ### original-language
 ru
