--- a/data/posts/2000/1293.md
+++ b/data/posts/2000/1293.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/lr1gAWJyS9I?t=2170
 
 ### title.ru
-
+Война в Украине закончится до 20 января 2025 года
 
 ### statement.en
 I believe that it will stop by January 20 in any case.
@@ -26,7 +26,7 @@ War in Ukraine
 1) Borovoy Live https://youtu.be/lr1gAWJyS9I?t=2170
 
 ### title.en
-
+The war in Ukraine will end before January 20, 2025
 
 ### original-language
 ru
