--- a/data/posts/2000/1310.md
+++ b/data/posts/2000/1310.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/3QYHhEnmJLw?t=800
 
 ### title.ru
-
+Россия распадётся на много новых государств
 
 ### statement.en
 There are no chances left that Russia will survive as a unified state. Absolutely no chances. There will be many new states.
@@ -26,7 +26,7 @@ There are no chances left that Russia will survive as a unified state. Absolutel
 1) Borovoy Live https://youtu.be/3QYHhEnmJLw?t=800
 
 ### title.en
-
+Russia will break up into many new states
 
 ### original-language
 ru
