--- a/data/posts/2000/1402.md
+++ b/data/posts/2000/1402.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/YhhkDOfk8Sg?t=1795
 
 ### title.ru
-
+Россия захватит Часов Яр довольно быстро
 
 ### statement.en
 I think they will take Chasiv Yar, and they’ll do it fairly quickly. 
@@ -26,7 +26,7 @@ Referring to Russian forces.
 1) Yulia Latynina https://youtu.be/YhhkDOfk8Sg?t=1795
 
 ### title.en
-
+Russia will capture Chasiv Yar quite quickly
 
 ### original-language
 ru
