--- a/data/posts/2000/1588.md
+++ b/data/posts/2000/1588.md
@@ -14,7 +14,7 @@
 1) Телеграм канал Arestovich / Official https://t.me/O_Arestovich_official/6290
 
 ### title.ru
-
+Россия готовит стратегическое наступление по всему фронту от Запорожья до Купянска, вопрос дней
 
 ### statement.en
 Russian forces are building up strike groups. They will attack along the entire front, from Zaporizhzhia to Kupiansk. A strategic offensive is being prepared, and it’s a matter of days.
@@ -26,7 +26,7 @@ Russian forces are building up strike groups. They will attack along the entire 
 1) Telegram channel Arestovich / Official https://t.me/O_Arestovich_official/6290
 
 ### title.en
-
+Russia is preparing a strategic offensive along the entire front from Zaporizhzhia to Kupyansk, a matter of days
 
 ### original-language
 ru
