--- a/data/posts/3000/2053.md
+++ b/data/posts/3000/2053.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/P4JChlA6gzc?t=2361
 
 ### title.ru
-
+Прекращение огня будет 25 января 2025 года | Война в Украине
 
 ### statement.en
 Judging by how things are going, a ceasefire will likely happen on January 25 or around that date... And if no extraordinary factors intervene, it’s highly probable that we’ll see a ceasefire in spring. 
@@ -26,7 +26,7 @@ In response to: "Alexey, what do you think, is a ceasefire possible before May 1
 1) https://youtu.be/P4JChlA6gzc?t=2361
 
 ### title.en
-
+The ceasefire will be on January 25, 2025 | War in Ukraine
 
 ### original-language
 ru
