--- a/data/posts/3000/2082.md
+++ b/data/posts/3000/2082.md
@@ -14,7 +14,7 @@
 1) ГОЛОВАНОВ https://youtu.be/yGA7uCigxBs?t=4364
 
 ### title.ru
-
+Биткоин будет стоить миллион долларов
 
 ### statement.en
 Bitcoin will continue to rise. It is designed as a growing system. If it’s used for partially storing assets of the U.S. national debt, it could reach a million... Ultimately, each Bitcoin is expected to be worth a million.
@@ -26,7 +26,7 @@ Bitcoin will continue to rise. It is designed as a growing system. If it’s use
 1) HOLOVANOV https://youtu.be/yGA7uCigxBs?t=4364
 
 ### title.en
-
+Bitcoin will be worth a million dollars
 
 ### original-language
 ru
