--- a/data/posts/3000/2143.md
+++ b/data/posts/3000/2143.md
@@ -14,7 +14,7 @@
 1) ГОЛОВАНОВ https://youtu.be/taJXfbN6Peo?t=291
 
 ### title.ru
-
+Скоро будет встреча Си Цзиньпина, Путина и Трампа, где они поделят мир
 
 ### statement.en
 I think within a short period, two to three months, sorry, no less, preparations will be made for a meeting. There will be a meeting between Xi Jinping, Putin, and Trump, where they will divide the world.
@@ -26,7 +26,7 @@ I think within a short period, two to three months, sorry, no less, preparations
 1) HOLOVANOV https://youtu.be/taJXfbN6Peo?t=291
 
 ### title.en
-
+A meeting between Xi Jinping, Putin, and Trump where they will divide the world will happen soon
 
 ### original-language
 ru
