--- a/data/posts/3000/2539.md
+++ b/data/posts/3000/2539.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/_pRtPZRhqVw?t=1185
 
 ### title.ru
-
+Ядерная программа Ирана будет остановлена переговорами
 
 ### statement.en
 The Iran issue ranks second. On Trump’s scale, I would give it a weight of 3 out of 10. We know that this issue will be resolved, and very quickly. The nuclear program will be stopped through negotiations.
@@ -26,7 +26,7 @@ The Iran issue ranks second. On Trump’s scale, I would give it a weight of 3 o
 1) Borovoy Live https://youtu.be/_pRtPZRhqVw?t=1185
 
 ### title.en
-
+Iran's nuclear program will be stopped by negotiations
 
 ### original-language
 ru
