--- a/data/posts/3000/2739.md
+++ b/data/posts/3000/2739.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/0f2XchA-b9A?t=1214
 
 ### title.ru
-
+Россия будет запускать по 1000 Шахедов за ночь по Украине
 
 ### statement.en
 Recently, there was the largest overnight drone attack on Kyiv — nearly 300 Shaheds. Russian channels claimed, “Just wait — there will be 600 soon, then 1,000.” It won’t happen soon, but eventually, it definitely will. The Shaheds are getting more advanced, harder to shoot down... They’ll terrorize the rear, strike with ballistic missiles, and hit with Shaheds. And when the attacks reach 400–600 Shaheds in a single night — and they definitely will, in six months or a year — things will get very serious. Air defense won’t be able to handle it.
@@ -26,7 +26,7 @@ Recently, there was the largest overnight drone attack on Kyiv — nearly 300 Sh
 1) https://youtu.be/0f2XchA-b9A?t=1214
 
 ### title.en
-
+Russia will be launching 1000 Shaheds per night on Ukraine
 
 ### original-language
 ru
