--- a/data/posts/3000/2895.md
+++ b/data/posts/3000/2895.md
@@ -14,7 +14,7 @@
 1) Александр ШЕЛЕСТ https://youtu.be/OvZst0Yxxlk?t=5970
 
 ### title.ru
-
+Снижение мобилизационного возраста и женская мобилизация практически неизбежны в Украине
 
 ### statement.en
 Lowering the conscription age and female mobilization are practically inevitable. Tentatively, if things continue this way, it may happen around October–November of this year.
@@ -26,7 +26,7 @@ Is it true that there will be a female mobilization?
 1) Aleksandr SHELEST https://youtu.be/OvZst0Yxxlk?t=5970
 
 ### title.en
-
+The lowering of the mobilization age and female mobilization are practically inevitable in Ukraine
 
 ### original-language
 ru
