--- a/data/posts/3000/2973.md
+++ b/data/posts/3000/2973.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/ZthsmIK003g?t=255
 
 ### title.ru
-
+Поставки оружия Украине возобновятся, но они не будут в том объёме
 
 ### statement.en
 My prediction is this: supplies will resume, but not in the same volume, and it'll be like a drop in the ocean. Meanwhile, Putin will escalate the air and ground campaigns against Ukraine. And following the results of the summer-autumn campaign, another proposal will follow, only this time it won't be for 4 regions, but 6.
@@ -26,7 +26,7 @@ My prediction is this: supplies will resume, but not in the same volume, and it'
 1) Yulia Latynina https://youtu.be/ZthsmIK003g?t=255
 
 ### title.en
-
+Arms supplies to Ukraine will resume, but they will not be at the same volume
 
 ### original-language
 ru
