--- a/data/posts/3000/2974.md
+++ b/data/posts/3000/2974.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/ZthsmIK003g?t=1530
 
 ### title.ru
-
+Появление атомной бомбы у Ирана практически неизбежно
 
 ### statement.en
 I think Iran's acquisition of an atomic bomb is practically inevitable now, sooner or later. Because they will immediately resume their nuclear program—they have already resumed it—and try to achieve it. Whether Pakistan or China helps them, or they accidentally find a car with a nuclear bomb parked in the mountains, that's a secondary matter.
@@ -26,7 +26,7 @@ I think Iran's acquisition of an atomic bomb is practically inevitable now, soon
 1) Yulia Latynina https://youtu.be/ZthsmIK003g?t=1530
 
 ### title.en
-
+The appearance of an atomic bomb in Iran is practically inevitable
 
 ### original-language
 ru
