--- a/data/posts/4000/3001.md
+++ b/data/posts/4000/3001.md
@@ -14,7 +14,7 @@
 1) Ян Матвеев https://youtu.be/m4vqBvoojsg?t=365
 
 ### title.ru
-
+Россия не захватит Херсон ни в 2025 ни в 2026 году
 
 ### statement.en
 No, of course not, and it won't be able to next year either; there are no prospects for it. 
@@ -26,7 +26,7 @@ Answer to the question: "Do you think Russia will be able to capture Kherson thi
 1) Ian Matveev https://youtu.be/m4vqBvoojsg?t=365
 
 ### title.en
-
+Russia will not capture Kherson neither in 2025 nor in 2026
 
 ### original-language
 ru
