--- a/data/posts/4000/3002.md
+++ b/data/posts/4000/3002.md
@@ -14,7 +14,7 @@
 1) Ян Матвеев https://youtu.be/m4vqBvoojsg?t=1145
 
 ### title.ru
-
+Путин не застрелится
 
 ### statement.en
 Putin also has an awarded weapon, but he'll never have the guts to make the right choice. 
@@ -26,7 +26,7 @@ Meaning, Putin won't shoot himself.
 1) Ian Matveev https://youtu.be/m4vqBvoojsg?t=1145
 
 ### title.en
-
+Putin will not shoot himself
 
 ### original-language
 ru
