--- a/data/posts/4000/3003.md
+++ b/data/posts/4000/3003.md
@@ -14,7 +14,7 @@
 1) Ян Матвеев https://youtu.be/m4vqBvoojsg?t=2020
 
 ### title.ru
-
+30 000 Северокорейских солдат не бросят в активные бои на Украинской территории
 
 ### statement.en
 I don't think they'll be thrown into active combat on Ukrainian territory. Instead, they'll likely be stationed somewhere along the borders to relieve the Russian army, so they can cover the Belgorod, Bryansk, and partially Kursk regions from potential invasions by Ukrainian forces.
@@ -26,7 +26,7 @@ Answer to the comment: "Heard the news about 30,000 North Koreans being sent to 
 1) Ian Matveev https://youtu.be/m4vqBvoojsg?t=2020
 
 ### title.en
-
+30,000 North Korean soldiers will not be thrown into active combat on Ukrainian territory
 
 ### original-language
 ru
