--- a/data/posts/4000/3004.md
+++ b/data/posts/4000/3004.md
@@ -14,7 +14,7 @@
 1) Ян Матвеев https://youtu.be/m4vqBvoojsg?t=8790
 
 ### title.ru
-
+Китай не нападёт на Тайвань
 
 ### statement.en
 I think no, they likely won't attack. The US will certainly get involved. 
@@ -26,7 +26,7 @@ Answer to the question: "Do you think China will attack Taiwan?"
 1) Ian Matveev https://youtu.be/m4vqBvoojsg?t=8790
 
 ### title.en
-
+China will not attack Taiwan
 
 ### original-language
 ru
