--- a/data/posts/4000/3005.md
+++ b/data/posts/4000/3005.md
@@ -8,13 +8,13 @@
 Мне кажется, что нет.
 
 ### context.ru
-Ответ на вопрос: "Как вы думаете светит ли Росси очередная Чеченская война?"
+Ответ на вопрос: "Как вы думаете светит ли России очередная Чеченская война?"
 
 ### notes.ru
 1) Ян Матвеев https://youtu.be/m4vqBvoojsg?t=9120
 
 ### title.ru
-
+В России не будет очередной Чеченской войны
 
 ### statement.en
 I don't think so. 
@@ -26,7 +26,7 @@ Answer to the question: "Do you think Russia is facing another Chechen war?"
 1) Ian Matveev https://youtu.be/m4vqBvoojsg?t=9120
 
 ### title.en
-
+There will not be another Chechen war in Russia
 
 ### original-language
 ru
