--- a/data/posts/4000/3006.md
+++ b/data/posts/4000/3006.md
@@ -17,7 +17,7 @@
 1) https://t.me/logikamarkova/18145
 
 ### title.ru
-
+Трамп озвучит для России мягкий ультиматум 14 июля 2025 года
 
 ### statement.en
 Trump promised to announce a surprise for Russia on Monday, July 14th. Everyone's guessing what it could be. My opinion is that Trump will issue a soft ultimatum:
@@ -35,7 +35,7 @@ But of course, no one can accurately predict Trump. Not even he himself.
 1) https://t.me/logikamarkova/18145
 
 ### title.en
-
+Trump will voice a soft ultimatum for Russia on July 14, 2025
 
 ### original-language
 ru
