--- a/data/posts/4000/3008.md
+++ b/data/posts/4000/3008.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/RAR7jmZef1o?t=1805
 
 ### title.ru
-
+Не будет признания оккупированных Россией территорий Украины
 
 ### statement.en
 First, Putin says, recognize these territories and give me guarantees, and then I'll be ready to stop the hot phase of the war. He understands that if the war stops now along this line, it will lead to endless negotiations that will last decades and certainly won't result in the recognition of occupied territory.
@@ -26,7 +26,7 @@ First, Putin says, recognize these territories and give me guarantees, and then 
 1) Borovoy Live https://youtu.be/RAR7jmZef1o?t=1805
 
 ### title.en
-
+There will be no recognition of the territories of Ukraine occupied by Russia
 
 ### original-language
 ru
