--- a/data/posts/4000/3009.md
+++ b/data/posts/4000/3009.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/RAR7jmZef1o?t=1950
 
 ### title.ru
-
+Остановка войны в Украине - это немедленные выборы и отстранение от власти команды Зеленского
 
 ### statement.en
 And Zelensky also cares about security. He understands that stopping the war means immediate elections, immediate removal of this group from power, and the start of investigations into this group's activities after the elections. 
@@ -26,7 +26,7 @@ And Zelensky also cares about security. He understands that stopping the war mea
 1) Borovoy Live https://youtu.be/RAR7jmZef1o?t=1950
 
 ### title.en
-
+A halt to the war in Ukraine is immediate elections and the removal of Zelensky's team from power
 
 ### original-language
 ru
