--- a/data/posts/4000/3010.md
+++ b/data/posts/4000/3010.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/0DBNta2i34Y?t=4643
 
 ### title.ru
-
+Китайский язык не вытеснит Английский
 
 ### statement.en
 Chinese won't displace English... Unless, of course, the Chinese switch to Latin script, which they won't.
@@ -26,7 +26,7 @@ Chinese won't displace English... Unless, of course, the Chinese switch to Latin
 1) https://youtu.be/0DBNta2i34Y?t=4643
 
 ### title.en
-
+The Chinese language will not supplant English
 
 ### original-language
 ru
