--- a/data/posts/4000/3011.md
+++ b/data/posts/4000/3011.md
@@ -15,7 +15,7 @@
 1) https://t.me/logikamarkova/18157
 
 ### title.ru
-
+ЕС не вернёт России замороженные 200 миллиардов евро
 
 ### statement.en
 The German Chancellor stated that Russia must pay 500 billion euros to Ukraine. And then Russia can ask for the 200 billion euros frozen in the EU to be returned to them. Hmm. By the way, in that case, they wouldn't give back the 200 billion euros for anything. They'd find something to fault.
@@ -27,7 +27,7 @@ The German Chancellor stated that Russia must pay 500 billion euros to Ukraine. 
 1) https://t.me/logikamarkova/18157
 
 ### title.en
-
+The EU will not return the frozen 200 billion euros to Russia
 
 ### original-language
 ru
