--- a/data/posts/4000/3012.md
+++ b/data/posts/4000/3012.md
@@ -14,7 +14,7 @@
 1) Filippovskiy 13 https://youtu.be/85dZngGPHSI?t=4510
 
 ### title.ru
-
+Южная Корея создаст своё ядерное оружие
 
 ### statement.en
 South Korea will likely develop nuclear weapons within decades.
@@ -26,7 +26,7 @@ South Korea will likely develop nuclear weapons within decades.
 1) Filippovskiy 13 https://youtu.be/85dZngGPHSI?t=4510
 
 ### title.en
-
+South Korea will create its own nuclear weapons
 
 ### original-language
 ru
