--- a/data/posts/4000/3013.md
+++ b/data/posts/4000/3013.md
@@ -14,7 +14,7 @@
 1) Котрикадзе Дзядко https://youtu.be/YapE4WQ_G6o?t=475
 
 ### title.ru
-
+Трамп объявит об иных санкциях против России 14 июля 2025 года
 
 ### statement.en
 I think Trump will announce sanctions tomorrow, but they won't be the kind Lindsey Graham is proposing. I believe Graham's suggested sanctions – 500% tariffs against Russia's trade partners – are too extreme; I don't think that will happen. I don't believe Trump will go that far. I think the sanctions will be different, much less painful, but still a significant blow to Russia.
@@ -26,7 +26,7 @@ I think Trump will announce sanctions tomorrow, but they won't be the kind Linds
 1) Kotrikadze Dzyadko https://youtu.be/YapE4WQ_G6o?t=475
 
 ### title.en
-
+Trump will announce other sanctions against Russia on July 14, 2025
 
 ### original-language
 ru
