--- a/data/posts/4000/3015.md
+++ b/data/posts/4000/3015.md
@@ -14,7 +14,7 @@
 1) Живой Гвоздь https://youtu.be/tMxuZPqW4Eo?t=2600
 
 ### title.ru
-
+Не будет 120 рублей за доллар
 
 ### statement.en
 There won't be a collapse. No catastrophic 120 rubles per dollar; there's no need for that.
@@ -26,7 +26,7 @@ There won't be a collapse. No catastrophic 120 rubles per dollar; there's no nee
 1) Live Nail https://youtu.be/tMxuZPqW4Eo?t=2600
 
 ### title.en
-
+The dollar will not be 120 rubles
 
 ### original-language
 ru
