--- a/data/posts/4000/3016.md
+++ b/data/posts/4000/3016.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/GmiwFetVOdI?t=712
 
 ### title.ru
-
+Покровск, Славянск, Краматорск не будут взяты Россией в сентябре 2025 года
 
 ### statement.en
 In September, when these 50 days are up, it will be clear that no Pokrovsks have been taken, Konstantinovka and Druzhkivka haven't been taken, Sloviansk and Kramatorsk haven't been taken, and there's no buffer zone in the Sumy region.
@@ -26,7 +26,7 @@ In September, when these 50 days are up, it will be clear that no Pokrovsks have
 1) https://youtu.be/GmiwFetVOdI?t=712
 
 ### title.en
-
+Pokrovsk, Sloviansk, Kramatorsk will not be taken by Russia in September 2025
 
 ### original-language
 ru
