--- a/data/posts/4000/3017.md
+++ b/data/posts/4000/3017.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/5dGVyXs3_WM?t=113
 
 ### title.ru
-
+В России продолжится серия странных смертей чиновников и нефтяников
 
 ### statement.en
 I think it will continue. My terrible prediction—God forbid it comes true, I wish death on no one. But unfortunately, there's reason to believe it will, because there's a huge process of capital outflow from Russia. 
@@ -26,7 +26,7 @@ Responding to the comment: 'People who knew too much are unexpectedly passing aw
 1) https://youtu.be/5dGVyXs3_WM?t=113
 
 ### title.en
-
+The series of strange deaths of officials and oilmen will continue in Russia
 
 ### original-language
 ru
