--- a/data/posts/4000/3018.md
+++ b/data/posts/4000/3018.md
@@ -14,7 +14,7 @@
 1) NEMYRIALIVE https://youtu.be/LEcPBNvl5xU?t=1345
 
 ### title.ru
-
+Авиация Северной Кореи будет уничтожена в первые часы в случае войны с Южной Кореей
 
 ### statement.en
 North Korea's air force is incredibly weak, it's practically nonexistent. In the event of a war with South Korea, their air force would be destroyed within the first few hours.
@@ -26,7 +26,7 @@ North Korea's air force is incredibly weak, it's practically nonexistent. In the
 1) NEMYRIALIVE https://youtu.be/LEcPBNvl5xU?t=1345
 
 ### title.en
-
+North Korea's air force will be destroyed in the first hours in the event of a war with South Korea
 
 ### original-language
 ru
