--- a/data/posts/4000/3020.md
+++ b/data/posts/4000/3020.md
@@ -14,7 +14,7 @@
 1) https://t.me/apwagner/44424
 
 ### title.ru
-
+Список Эпштейна не опубликуют
 
 ### statement.en
 Former Trump aide Steve Bannon said that if Trump refuses to publish the Epstein list, he will lose 10 percent of the MAGA movement. It's not just about the pedophile network and all that, but also about who rules us, right? Former Trump aide Steve Bannon said that if Trump refuses to publish the Epstein list, he will lose 10 percent of the MAGA movement. If we lose 10% of the MAGA movement right now, we will lose 40 seats in the 2026 congressional midterm elections, and then we will lose the presidency. Something tells me the list will not be published anyway.
@@ -26,7 +26,7 @@ Former Trump aide Steve Bannon said that if Trump refuses to publish the Epstein
 1) https://t.me/apwagner/44424
 
 ### title.en
-
+Epstein's list will not be published
 
 ### original-language
 ru
