--- a/data/posts/4000/3021.md
+++ b/data/posts/4000/3021.md
@@ -15,7 +15,7 @@
 1) https://t.me/logikamarkova/18112
 
 ### title.ru
-
+Закон Линдси Грэма о тарифах в 500% будет принят
 
 ### statement.en
 Sanctions against Russia: a new bill by Senator Lindsey Graham, who has been receiving bribes from Zelensky for many years, on 500% tariffs against all who trade with Russia and do not pay Ukraine, will be introduced in Congress on July 9. Trump has effectively given his consent to it. The prediction is that it will be passed.
@@ -29,7 +29,7 @@ But. The words "the president must" in it will be replaced with "the president m
 1) https://t.me/logikamarkova/18112
 
 ### title.en
-
+Lindsey Graham's 500% tariff bill will be passed
 
 ### original-language
 ru
@@ -41,10 +41,10 @@ ru
 2025-11-08
 
 ### time-verified
-
+2025-11-08
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
