--- a/data/posts/4000/3022.md
+++ b/data/posts/4000/3022.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/LIrovCywAfU?t=193
 
 ### title.ru
-
+В России запретят искусственный интеллект несоответствующий мнению Путина 
 
 ### statement.en
 I'm confident the next step will be a ban on artificial intelligence. A ban on everything that, according to Putin, responds to your queries incorrectly.
@@ -26,7 +26,7 @@ I'm confident the next step will be a ban on artificial intelligence. A ban on e
 1) https://youtu.be/LIrovCywAfU?t=193
 
 ### title.en
-
+In Russia, artificial intelligence that does not conform to Putin's opinion will be banned
 
 ### original-language
 ru
