--- a/data/posts/4000/3023.md
+++ b/data/posts/4000/3023.md
@@ -14,7 +14,7 @@
 1) https://t.me/Lipsits_again/2602
 
 ### title.ru
-
+ЦБ России снизит ключевую ставку в июле 2025 года
 
 ### statement.en
 The ice is thin, but the Central Bank will lower the rate anyway—it seems they've decided there's no point in protecting Russians from inflation.
@@ -26,7 +26,7 @@ The ice is thin, but the Central Bank will lower the rate anyway—it seems they
 1) https://t.me/Lipsits_again/2602
 
 ### title.en
-
+The Bank of Russia will cut the key rate in July 2025
 
 ### original-language
 ru
