--- a/data/posts/4000/3024.md
+++ b/data/posts/4000/3024.md
@@ -14,7 +14,7 @@
 1) Форум Свободной России https://youtu.be/OTAhhnHmvpU?t=710
 
 ### title.ru
-
+Россия не захватит Купянск и Сиверск до сентября 2025
 
 ### statement.en
 In 50 days... Siversk will not be taken, Serebryanka will not be taken, Kupyansk will not be taken, Borova will not be taken, they will not reach Zaporizhzhia. 
@@ -26,7 +26,7 @@ Russian forces.
 1) Forum of Free Russia https://youtu.be/OTAhhnHmvpU?t=710
 
 ### title.en
-
+Russia will not capture Kupyansk and Siversk before September 2025
 
 ### original-language
 ru
