--- a/data/posts/4000/3025.md
+++ b/data/posts/4000/3025.md
@@ -14,7 +14,7 @@
 1) Форум Свободной России https://youtu.be/OTAhhnHmvpU?t=1430
 
 ### title.ru
-
+Китай не захватит Тайвань - будет медленная интеграция как с Гонконгом
 
 ### statement.en
 They won't seize it. It will agree to some kind of slow integration on its own, like Hong Kong. 
@@ -26,7 +26,7 @@ In response to the comment: "If Taiwan is captured..."
 1) Forum of Free Russia https://youtu.be/OTAhhnHmvpU?t=1430
 
 ### title.en
-
+China will not capture Taiwan—there will be a slow integration like with Hong Kong
 
 ### original-language
 ru
