--- a/data/posts/4000/3026.md
+++ b/data/posts/4000/3026.md
@@ -15,7 +15,7 @@
 2) Про тюрьмы и границы уже было. Поэтому этот прогноз про националистов.
 
 ### title.ru
-
+После войны в Украине в мире не будет границ, тюрьм и националистов
 
 ### statement.en
 I am absolutely confident, and you will see, it won't be long to wait. Three things will become completely unacceptable in the world after this war. Prisons will disappear from the world as the main instrument of the enslavement of the people. Nationalists will disappear from the world, because any nationalism, at its extreme, leads to Nazism. And borders will disappear from the world. 
@@ -28,7 +28,7 @@ After the war in Ukraine.
 2) The part about prisons and borders has already been discussed. Therefore, this prediction is about nationalists.
 
 ### title.en
-
+After the war in Ukraine, there will be no borders, prisons, or nationalists in the world
 
 ### original-language
 ru
