--- a/data/posts/4000/3027.md
+++ b/data/posts/4000/3027.md
@@ -14,7 +14,7 @@
 1) Нино Росебашвили https://youtu.be/n2tpFDlCuUE?t=2600
 
 ### title.ru
-
+Путин ударит по странам Балтии, но на Финляндию не полезет
 
 ### statement.en
 I'm completely confident that at some point, Putin will try to strike the Baltic states. I believe he has many plans drawn up regarding Latvia, Lithuania, and Estonia. Of course, he is unlikely to go for Finland, given his past bad experience and the fact that the Finns are more prepared to defend their country.
@@ -26,7 +26,7 @@ I'm completely confident that at some point, Putin will try to strike the Baltic
 1) Nino Rosebashvili https://youtu.be/n2tpFDlCuUE?t=2600
 
 ### title.en
-
+Putin will strike the Baltic states, but he will not invade Finland
 
 ### original-language
 ru
