--- a/data/posts/4000/3028.md
+++ b/data/posts/4000/3028.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/K6Z8z7JbTIg?t=2225
 
 ### title.ru
-
+В России будут белые списки для интернета, если Путин сохранит власть 
 
 ### statement.en
 It certainly looks like it, that's exactly what's happening. This is part of the same pattern as the mobile internet shutdowns. I'll just remind you that Russia set a record for mobile shutdowns and the filtering of all previous services. I'd say this is precisely about building that very "Cheburnet," and as a resident of Russia, I'd slowly prepare for whitelists. I'm sure that if Putin maintains his health and power for some prolonged period of time—say, a year or two or three—we'll ultimately arrive at whitelists. That's when there's a list of what's allowed and everything else is forbidden.
@@ -26,7 +26,7 @@ In response to the hosts' question: "Doesn't this look like preparation for a so
 1) https://youtu.be/K6Z8z7JbTIg?t=2225
 
 ### title.en
-
+In Russia, there will be white lists for the internet if Putin remains in power
 
 ### original-language
 ru
