--- a/data/posts/4000/3029.md
+++ b/data/posts/4000/3029.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/K6Z8z7JbTIg?t=2470
 
 ### title.ru
-
+WhatsApp точно заблокируют в России
 
 ### statement.en
 I still think that Telegram will follow in WhatsApp's footsteps, but that's just speculation. WhatsApp will definitely be blocked, and Telegram most likely will as well.
@@ -26,7 +26,7 @@ In Russia.
 1) https://youtu.be/K6Z8z7JbTIg?t=2470
 
 ### title.en
-
+WhatsApp will definitely be blocked in Russia
 
 ### original-language
 ru
