--- a/data/posts/4000/3030.md
+++ b/data/posts/4000/3030.md
@@ -14,7 +14,7 @@
 1) Yulia Latynina https://youtu.be/brsA0XqlpbI?t=2680
 
 ### title.ru
-
+Сирии больше не будет - она будет разделена
 
 ### statement.en
 I can predict that the state of Syria will most likely no longer exist. It will be divided, to some extent, between Turkey and, perhaps, chunks of Syria, the Alawites, and the territory that Israel controls.
@@ -26,7 +26,7 @@ I can predict that the state of Syria will most likely no longer exist. It will 
 1) Yulia Latynina https://youtu.be/brsA0XqlpbI?t=2680
 
 ### title.en
-
+Syria will cease to exist—it will be partitioned
 
 ### original-language
 ru
