--- a/data/posts/4000/3031.md
+++ b/data/posts/4000/3031.md
@@ -14,7 +14,7 @@
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=825
 
 ### title.ru
-
+Войны не будет между Россией и Китаем в ближайшее время
 
 ### statement.en
 A weakened Russia suits China as a forced, subordinate partner. Therefore, I don't think any war could happen between Russia and China in the near future. I think everything suits China today.
@@ -26,7 +26,7 @@ A weakened Russia suits China as a forced, subordinate partner. Therefore, I don
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=825
 
 ### title.en
-
+There will be no war between Russia and China in the near future
 
 ### original-language
 ru
