--- a/data/posts/4000/3034.md
+++ b/data/posts/4000/3034.md
@@ -14,7 +14,7 @@
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=3705
 
 ### title.ru
-
+Публикация этого досье не повлечет за собой вообще ничего
 
 ### statement.en
 When the Democrats published a dossier on the wiretapping that Nixon placed in his political opponent's headquarters, it led to Nixon's impeachment and a shake-up of the American political system. The publication of this dossier will most likely not lead to anything at all. Because that is Donald Trump's signature style.
@@ -26,7 +26,7 @@ He is speaking about a U.S. National Intelligence report that there is evidence 
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=3705
 
 ### title.en
-
+The publication of this dossier will lead to absolutely nothing
 
 ### original-language
 ru
