--- a/data/posts/4000/3035.md
+++ b/data/posts/4000/3035.md
@@ -14,7 +14,7 @@
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=4170
 
 ### title.ru
-
+В 2028 году темой атаки против сторонников Трампа будет список Эпштейна
 
 ### statement.en
 This is a take that I plan to revisit in four years to post it in a thread about how Mikhail Svetov warned you about this. A beneficial political strategy for the opposing Democratic presidential candidate in the 2028 election will be a promise to publish the names of the people on the Epstein list, and an attack on the Trump administration for refusing to do so. Because that could have cast a shadow over Donald Trump himself, because they were covering for certain people who are on those lists. I can easily picture this. Moreover, I'm even willing to bet some money on it, that it will be part of the discussion in 2028 and one of the lines of attack that the left will use against Trump's supporters. Definitely.
@@ -26,7 +26,7 @@ This is a take that I plan to revisit in four years to post it in a thread about
 1) SVTV https://youtu.be/sHj9RAVXFW4?t=4170
 
 ### title.en
-
+In 2028, the topic of attack against Trump supporters will be the Epstein list
 
 ### original-language
 ru
