--- a/data/posts/4000/3036.md
+++ b/data/posts/4000/3036.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/viLEre1JdM4?t=219
 
 ### title.ru
-
+До конца лета Россия не дойдёт до Великого Бурлука | Война в Украине
 
 ### statement.en
 Many researchers suggest that Russia has a plan to move further towards the village of Velykyi Burluk... But by the end of summer, no, that's too far, it's beyond Russia's capabilities right now.
@@ -26,7 +26,7 @@ Many researchers suggest that Russia has a plan to move further towards the vill
 1) https://youtu.be/viLEre1JdM4?t=219
 
 ### title.en
-
+Russia will not reach Velykyi Burluk by the end of the summer | War in Ukraine
 
 ### original-language
 ru
