--- a/data/posts/4000/3037.md
+++ b/data/posts/4000/3037.md
@@ -14,7 +14,7 @@
 1) Форум Свободной России https://youtu.be/FIyjBFfwvno?t=1520
 
 ### title.ru
-
+Де Лука не будет избран на третий срок губернатором Кампании | Италия
 
 ### statement.en
 De Luca failed on both fronts, facing sharp criticism within Italy. He is unlikely to be elected for a third term as governor of Campania.
@@ -26,7 +26,7 @@ Campania is a region in Italy.
 1) Forum of Free Russia https://youtu.be/FIyjBFfwvno?t=1520
 
 ### title.en
-
+De Luca will not be elected for a third term as Governor of Campania | Italy
 
 ### original-language
 ru
