--- a/data/posts/4000/3038.md
+++ b/data/posts/4000/3038.md
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/_dovg3pWM_c?t=520
 
 ### title.ru
-
+Россия не согласится на предложение Украины о встрече Зеленского и Путина
 
 ### statement.en
 I don't think what's happening in Istanbul can be considered a step towards peace in any way. As for a high-level meeting, it won't happen in the format proposed by Ukraine. 
@@ -26,7 +26,7 @@ Russia won't agree to Ukraine's proposal for a meeting between Zelenskyy and Put
 1) Feygin LIVE https://youtu.be/_dovg3pWM_c?t=520
 
 ### title.en
-
+Russia will not agree to Ukraine's proposal for a meeting between Zelensky and Putin
 
 ### original-language
 ru
