--- a/data/posts/4000/3039.md
+++ b/data/posts/4000/3039.md
@@ -5,7 +5,7 @@
 28 <!-- yigal-levin, Игаль Левин -->
 
 ### statement.ru
-Не сложно догадаться, что с таким стремительным и всеохватывающим развитием ИИ наступит и эпоха больших массовых войн.
+Не сложно догадаться, что с таким стремительным и всеохватывающим развитием ИИ наступит и эпоха больших массовых войн
 
 ### context.ru
 
@@ -17,7 +17,7 @@
 
 
 ### statement.en
-It's not hard to guess that with such rapid and all-encompassing AI development, an era of large-scale, mass wars will also arrive.
+It's not hard to guess that with such rapid and all-encompassing AI development, an era of large-scale, mass wars will also arrive
 
 ### context.en
 
