--- a/data/posts/4000/3040.md
+++ b/data/posts/4000/3040.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/2EpCIqQ0Qv4?t=139
 
 ### title.ru
-
+ЦБ РФ снизит ключевую ставку до 18% в июле 2025
 
 ### statement.en
 I expect a decrease to 18%. 
@@ -26,7 +26,7 @@ Answer to the question: "What do you expect from July 25th, what will the Centra
 1) https://youtu.be/2EpCIqQ0Qv4?t=139
 
 ### title.en
-
+The Bank of Russia will cut the key rate to 18% in July 2025
 
 ### original-language
 ru
