--- a/data/posts/4000/3042.md
+++ b/data/posts/4000/3042.md
@@ -14,7 +14,7 @@
 1) Сергей Смирнов https://youtu.be/YezHGlWDUFI?t=6925
 
 ### title.ru
-
+На Дмитрия Трещанина не будет заведено уголовное дело до конца 2025 года
 
 ### statement.en
 Bet! I don't think you'll face criminal charges by New Year's. 
@@ -26,7 +26,7 @@ Dmitry Treshchanin won't have a criminal case opened against him before New Year
 1) Sergey Smirnov  https://youtu.be/YezHGlWDUFI?t=6925
 
 ### title.en
-
+No criminal case will be opened against Dmitry Treshchanin until the end of 2025
 
 ### original-language
 ru
