--- a/data/posts/4000/3043.md
+++ b/data/posts/4000/3043.md
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/0DQHZTF4GgI?t=1330
 
 ### title.ru
-
+Ядерного конфликта не будет между Россией и США, Великобританией или Францией
 
 ### statement.en
 There will be no nuclear conflict between Russia and France, or Russia and Great Britain, just as there will obviously be no nuclear conflict between Russia and the United States of America.
@@ -26,7 +26,7 @@ There will be no nuclear conflict between Russia and France, or Russia and Great
 1) Feygin LIVE https://youtu.be/0DQHZTF4GgI?t=1330
 
 ### title.en
-
+There will be no nuclear conflict between Russia and the USA, Great Britain, or France
 
 ### original-language
 ru
