--- a/data/posts/4000/3044.md
+++ b/data/posts/4000/3044.md
@@ -14,7 +14,7 @@
 1) Владимир Милов https://youtu.be/QZVRRnMYDd0?t=1920
 
 ### title.ru
-
+Starship никуда не полетит, они не смогут сделать дозаправку в космосе охлажденным топливом
 
 ### statement.en
 SpaceX. No Starship will fly anywhere. They definitely won't be able to refuel with cryogenic propellant in space. It's all a bubble, everything Musk depicts about Starships.
@@ -26,7 +26,7 @@ SpaceX. No Starship will fly anywhere. They definitely won't be able to refuel w
 1) Vladimir Milov https://youtu.be/QZVRRnMYDd0?t=1920
 
 ### title.en
-
+Starship will not fly anywhere; they will not be able to perform in-space refueling with chilled propellant
 
 ### original-language
 ru
