--- a/data/posts/4000/3046.md
+++ b/data/posts/4000/3046.md
@@ -17,7 +17,7 @@
 1) https://t.me/victorstepanych/4266
 
 ### title.ru
-
+Трамп не введет новые пошлины против России, а совсем выйдет из игры
 
 ### statement.en
 The most important thing about Trump's ultimatum isn't the ultimatum itself, but his resentment. Putin, he says, didn't even call me after my last ultimatum.
@@ -27,7 +27,7 @@ Overall, the sanctions aren't that great; to implement them, you'd have to fight
 Most likely, Trump won't introduce new duties, but will simply exit the game. He'll say, "I threatened and threatened, but they're not scared. I don't want to be friends with the Russians." He'll become friends with Zelenskyy instead.
 
 ### context.en
-
+Trump will not introduce new tariffs against Russia; he will completely leave the game
 
 ### notes.en
 1) https://t.me/victorstepanych/4266
