--- a/data/posts/4000/3050.md
+++ b/data/posts/4000/3050.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/8kb4KgpYE0M?t=311
 
 ### title.ru
-
+После 10 августа Путин не решится на массовые бомбёжки Украины, которые он проводил до
 
 ### statement.en
 So, we're waiting. You can place bets, everyone loves to argue. We can debate whether Putin will decide on the same massive bombings he conducted before August 10th. Those interested, write to me, and we'll debate.
@@ -26,7 +26,7 @@ So, we're waiting. You can place bets, everyone loves to argue. We can debate wh
 1) Borovoy Live https://youtu.be/8kb4KgpYE0M?t=311
 
 ### title.en
-
+After August 10, Putin will not venture the massive bombings of Ukraine that he carried out before
 
 ### original-language
 ru
