--- a/data/posts/4000/3178.md
+++ b/data/posts/4000/3178.md
@@ -15,7 +15,7 @@
 1) Yulia Latynina https://youtu.be/prS5OHtKXWc?t=1985
 
 ### title.ru
-
+США передадут Украине Томагавки
 
 ### statement.en
 I can say for my part that you can have no doubt about the Tomahawks; the question is how effective they will be, when, and how many. As for Tomahawks, this is a more than realistic scenario.
@@ -27,7 +27,7 @@ The US will transfer Tomahawks to Ukraine.
 1) Yulia Latynina https://youtu.be/prS5OHtKXWc?t=1985
 
 ### title.en
-
+The US will transfer Tomahawks to Ukraine
 
 ### original-language
 ru
@@ -36,7 +36,7 @@ ru
 2025-10-10
 
 ### time-awaiting
-2025-02-10
+2026-02-10
 
 ### time-verified
 
