--- a/data/posts/3000/2287.md
+++ b/data/posts/3000/2287.md
@@ -30,7 +30,7 @@
 1) https://t.me/O_Arestovich_official/6960
 
 ### title.ru
-
+Китай, США и Россия создадут фонд восстановления Украины на триллион долларов
 
 ### statement.en
 Remember this tweet.
@@ -56,7 +56,7 @@ The total size of the Fund is expected to reach $1 trillion.
 1) https://t.me/O_Arestovich_official/6960
 
 ### title.en
-
+China, the US, and Russia will create a trillion-dollar fund for the reconstruction of Ukraine
 
 ### original-language
 ru
