--- a/data/posts/3000/2409.md
+++ b/data/posts/3000/2409.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/j2VZiz_J640?t=940
 
 ### title.ru
-
+Когда режим Путина рухнет, все захваченные территории вернутся Украине
 
 ### statement.en
 In reality, Putin won’t last long. When this regime collapses, all those territories will return to Ukraine — there’s no doubt about that. And all those criminals who carried out these seizures — we will hunt them down around the world and bring them to justice. Justice will prevail. Sometimes, it doesn’t come immediately.
@@ -26,7 +26,7 @@ In reality, Putin won’t last long. When this regime collapses, all those terri
 1) Borovoy Live https://youtu.be/j2VZiz_J640?t=940
 
 ### title.en
-
+When the Putin regime collapses, all captured territories will return to Ukraine
 
 ### original-language
 ru
