--- a/data/posts/3000/2623.md
+++ b/data/posts/3000/2623.md
@@ -14,7 +14,7 @@
 1) ALPHA MEDIA https://youtu.be/eC-oyK7nP0w?t=120
 
 ### title.ru
-
+Большой войны между Индией и Пакистаном не будет
 
 ### statement.en
 Don't scare yourself with the Indo-Pakistani conflict. India and Pakistan have fought many times with each other... With a very high probability, this will be a series of border incidents, limited in scope to somewhere in Jammu and Kashmir, the disputed state.
@@ -26,7 +26,7 @@ Don't scare yourself with the Indo-Pakistani conflict. India and Pakistan have f
 1) ALPHA MEDIA https://youtu.be/eC-oyK7nP0w?t=120
 
 ### title.en
-
+There will be no major war between India and Pakistan
 
 ### original-language
 ru
