--- a/data/posts/4000/3014.md
+++ b/data/posts/4000/3014.md
@@ -14,7 +14,7 @@
 1) Игорь Яковенко https://youtu.be/mgmM50D7zIs?t=1420
 
 ### title.ru
-
+Россия сможет одномоментно запустить 1000 дронов по Украине
 
 ### statement.en
 To be fair, regarding Russia's much-vaunted 1,000 strikes per day—if they are achieved, and they most likely will be... 
@@ -26,7 +26,7 @@ Russia will be able to launch 1,000 drones at Ukraine simultaneously.
 1) Igor Yakovenko https://youtu.be/mgmM50D7zIs?t=1420
 
 ### title.en
-
+Russia will be able to launch 1000 drones at Ukraine simultaneously
 
 ### original-language
 ru
