--- a/data/posts/4000/3045.md
+++ b/data/posts/4000/3045.md
@@ -14,7 +14,7 @@
 1) SVTV https://youtu.be/cvWjoL6vJaA?t=310
 
 ### title.ru
-
+Борьба с VPN в Европе в ближайшие 10 лет приобретёт большой масштаб
 
 ### statement.en
 My very cautious prediction is that the fight against VPNs in Europe, not in the next one to two years but over a 10-year span, will also become widespread. The same situation currently unfolding in Russia, where people have massively switched to VPNs, will repeat itself in Europe.
@@ -26,7 +26,7 @@ My very cautious prediction is that the fight against VPNs in Europe, not in the
 1) SVTV https://youtu.be/cvWjoL6vJaA?t=310
 
 ### title.en
-
+The fight against VPNs in Europe will escalate significantly in the next 10 years
 
 ### original-language
 ru
