--- a/data/posts/4000/3047.md
+++ b/data/posts/4000/3047.md
@@ -14,7 +14,7 @@
 1) Живой Гвоздь https://youtu.be/MHTeE515SY4?t=690
 
 ### title.ru
-
+Встречи Трампа и Путина не будет в Пекине
 
 ### statement.en
 A meeting between Trump and Putin in Beijing is, in my opinion, impossible; there's no substance to it. In my view, it won't happen. 
@@ -26,7 +26,7 @@ Answer to the question: "Is a meeting between Trump and Putin possible?"
 1) Live Nail https://youtu.be/MHTeE515SY4?t=690
 
 ### title.en
-
+There will be no meeting between Trump and Putin in Beijing
 
 ### original-language
 ru
