--- a/data/posts/4000/3049.md
+++ b/data/posts/4000/3049.md
@@ -14,7 +14,7 @@
 1) Borovoy Live https://youtu.be/8kb4KgpYE0M?t=240
 
 ### title.ru
-
+Война в Украине будет остановлена достаточно быстро
 
 ### statement.en
 There's a very high probability that Putin will stop the war. It seems it won't be in 10 or 12 days, or by August 10th; larger timeframes are needed for that. But this war will be stopped relatively quickly.
@@ -26,7 +26,7 @@ Due to Trump's ultimatum.
 1) Borovoy Live https://youtu.be/8kb4KgpYE0M?t=240
 
 ### title.en
-
+The war in Ukraine will be stopped quickly enough
 
 ### original-language
 ru
